groups mockup largely there

--- a/media/css/mycelium_elements.css
+++ b/media/css/mycelium_elements.css
@@ -309,7 +309,7 @@ table.record_table th {
 table.record_table td {
 	padding: 2px;
 }
-table.striped tr.even td {
+.striped .striped_row.even {
 	background-color: #F2F2F2;
 }
 save_status_and_button {
