another tweak to use all instead of any

--- a/mycelium/apps/groups/templates/groups/group.html
+++ b/mycelium/apps/groups/templates/groups/group.html
@@ -34,7 +34,7 @@ $(function(){
 <div class="group_rules group_detail_column edit_mode_on">
 	<div class="detail_header">Rules</div>
 	<div class="group_rules_boolean_sentence">
-	All people who match <select><option>any</option><option>all</option></select> of the following rules:
+	All people who match <select><option selected>all</option><option>any</option></select> of the following rules:
 	</div>
 
 	{% include "groups/_rule.html" %}
