--- a/mycelium/templates/mycelium_base.html
+++ b/mycelium/templates/mycelium_base.html
@@ -47,5 +47,12 @@
 	{% endblock %}
 	</footer>
 	{% endblock %}
-	<script type="text/javascript"> var uservoiceOptions = {   /* required */   key: 'goodcloud',   host: 'goodcloud.uservoice.com',    forum: '107765',   showTab: true,     /* optional */   alignment: 'left',   background_color:'#004486',    text_color: 'white',   hover_color: '#06C',   lang: 'en' };  function _loadUserVoice() {   var s = document.createElement('script');   s.setAttribute('type', 'text/javascript');   s.setAttribute('src', ("https:" == document.location.protocol ? "https://" : "http://") + "cdn.uservoice.com/javascripts/widgets/tab.js");   document.getElementsByTagName('head')[0].appendChild(s); } _loadSuper = window.onload; window.onload = (typeof window.onload != 'function') ? _loadUserVoice : function() { _loadSuper(); _loadUserVoice(); }; </script>
+	<script type="text/javascript">
+  	(function() {
+	    var uv = document.createElement('script'); uv.type = 'text/javascript'; uv.async = true;
+	    uv.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'widget.uservoice.com/RP8dTYXSOIeaTsKxGLBQ.js';
+	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(uv, s);
+	  })();
+	</script>
+{#	<script type="text/javascript"> var uservoiceOptions = {   /* required */   key: 'goodcloud',   host: 'goodcloud.uservoice.com',    forum: '107765',   showTab: true,     /* optional */   alignment: 'left',   background_color:'#004486',    text_color: 'white',   hover_color: '#06C',   lang: 'en' };  function _loadUserVoice() {   var s = document.createElement('script');   s.setAttribute('type', 'text/javascript');   s.setAttribute('src', ("https:" == document.location.protocol ? "https://" : "http://") + "cdn.uservoice.com/javascripts/widgets/tab.js");   document.getElementsByTagName('head')[0].appendChild(s); } _loadSuper = window.onload; window.onload = (typeof window.onload != 'function') ? _loadUserVoice : function() { _loadSuper(); _loadUserVoice(); }; </script> #}
 {% endblock %}
