--- a/mycelium/apps/reports/templates/reports/detail_donors.html
+++ b/mycelium/apps/reports/templates/reports/detail_donors.html
@@ -1,43 +1,37 @@
 {% extends "reports/base.html" %}
 {% block title %}Reports - Unsaved Report{% endblock %}
 {% load humanize %}
-{% block breadcrumb_links %}<a href="{% url reports:search %}">Back to All Reports</a>{% endblock %}
+{% block breadcrumb_links %}<a href="{% url reports:search %}">Back to All Spreadsheets</a>{% endblock %}
 {% block page_content %}
 <div class="right_actions">
 	<a href="#" class="mycelium_btn mycelium_grey">Saved</a>
 </div>
-<div class="title"><img src="{% media_url "images/report-32.png" %}/>2010 Monthly Donors</div>
+<div class="title"><img src="{% media_url "images/report-32.png" %}"/>2010 Monthly Donors</div>
 
-<div class="setup_phrase">Find all of the people who:</div>
+<div class="setup_phrase">Include people who match <select><option selected>all</option><option>any</option></select> of the following rules:</div>
 <div class="criteria_list">
-	<div class="criterium">
-		<span class="additive">have</span>
-		<span class="tense">at least</span>
-		<span class="negator"></span>
-		<span class="left_side">1 donation</span>
-		<span class="operator">every</span>
-		<span class="right_side">
-			<span class="value">month</span>
-			<span class="units"></span>
-		</span>
+	<div class="rule">
+		<select><option>has any tag that</option><option>has a general tag that</option><option>has a volunteer tag that</option><option>has a donor tag that</option><option>volunteer status</option><option>last volunteer shift</option><option selected>last donation</option></select>
+
+		<select><option>is</option><option>is before</option><option selected>is after</option></select>
+
+		<input type="text" class="datepicker" value="12/31/2009" />
 	</div>
-	<div class="criterium">
-		<span class="additive"></span>
-		<span class="tense"></span>
-		<span class="negator">only</span>
-		<span class="left_side">include</span>
-		<span class="operator">things in calendar year</span>
-		<span class="right_side">
-			<span class="value">2010</span>
-			<span class="units"></span>
-		</span>
+			
+	<div class="rule">
+		<select><option>has any tag that</option><option>has a general tag that</option><option>has a volunteer tag that</option><option selected>has a donor tag that</option><option>volunteer status</option><option>last volunteer shift</option><option>last donation</option></select>
+
+		<select><option selected>is</option><option>is before</option><option>is after</option></select>
+
+		<input type="text" class="" value="monthly" />
 	</div>
 	<div class="new_criterium">
 		<a href="#" class="mycelium_btn mycelium_grey mycelium_small_btn">Add new criteria</a>
 	</div>
 </div>
 
-<div class="setup_phrase">Make a report that includes these columns:</div>
+
+<div class="setup_phrase">Include these columns:</div>
 <div class="column_list">
 	<div class="column"><input type="checkbox" checked id="id_first_name"><label for="id_first_name">First Name</label></div>
 	<div class="column"><input type="checkbox" checked id="id_last_name"><label for="id_last_name">Last Name </label></div>
@@ -80,9 +74,8 @@
 </table>
 </div>
 <div class="actions">
-	<a href="#" class="mycelium_btn">View Results</a>
-	<a href="#" class="mycelium_btn">Download CSV</a>
-
+	<a href="#" class="mycelium_btn">View All Results</a>
+	<a href="#" class="mycelium_btn">Download Spreadsheet</a>
 </div>
 
 {% endblock %}
