changed reports icon to spreadsheet icon

--- a/media/css/more.css
+++ b/media/css/more.css
@@ -49,8 +49,8 @@ body {
 	background-image: url("../images/icon-account-100.png");
 }
 .reports_btn {
-	background-image: url("../images/icon-report-76.png");
-	background-position: 40px 10px;	
+	background-image: url("../images/icon-spreadsheet-76.png");
+	background-position: 24px 10px;	
 }
 .more_row {
 	clear: left;
