--- a/mycelium/apps/mycelium_core/templates/mycelium_core/more_menu.html
+++ b/mycelium/apps/mycelium_core/templates/mycelium_core/more_menu.html
@@ -19,7 +19,7 @@
 	</div>
 	<div class="more_row">
 	<a href="{% url reports:search %}" class="mycelium_btn more_button reports_btn">
-		<div class="button_title">Download Spreadsheet</div>
+		<div class="button_title">Spreadsheets</div>
 		<div class="button_description">Create and download custom spreadsheets</div>
 	</a>
 	<a href="#" class="mycelium_btn more_button users_button">
