--- a/mycelium/apps/reports/templates/reports/detail_email.html
+++ b/mycelium/apps/reports/templates/reports/detail_email.html
@@ -6,7 +6,7 @@
 <div class="right_actions">
 	<a href="#" class="mycelium_btn mycelium_grey">Saved</a>
 </div>
-<div class="title"><img src="{% media_url "images/report-32.png" %}"/>Active Email Subscriptions</div>
+<div class="title"><img src="{% media_url "images/icon-spreadsheet-32.png" %}"/>Active Email Subscriptions</div>
 
 <div class="setup_phrase">Include people who match <select><option selected>all</option><option>any</option></select> of the following rules:</div>
 <div class="criteria_list">
