--- a/mycelium/apps/reports/templates/reports/search.html
+++ b/mycelium/apps/reports/templates/reports/search.html
@@ -6,7 +6,7 @@
 <div class="small_search">
 	<input id="id_page_top_search" name="page_top_search" />
 </div>
-<div class="title"><img src="{% media_url "images/report-32.png" %}" />Saved Spreadsheets</div>
+<div class="title"><img src="{% media_url "images/icon-spreadsheet-32.png" %}" />Saved Spreadsheets</div>
 
 <div class="report_list">
 	<a href="{% url reports:new_report %}" class="mycelium_btn">New Spreadsheet</a>
