--- a/mycelium/apps/reports/templates/reports/new.html
+++ b/mycelium/apps/reports/templates/reports/new.html
@@ -7,7 +7,7 @@
 <div class="right_actions">
 	<a href="#" class="mycelium_btn">Save Spreadsheet</a>
 </div>
-<div class="title"><img src="{% media_url "images/report-32.png" %}"/>Unsaved Spreadsheet</div>
+<div class="title"><img src="{% media_url "images/icon-spreadsheet-32.png" %}"/>Unsaved Spreadsheet</div>
 
 <div class="setup_phrase">Include people who match <select><option selected>all</option><option>any</option></select> of the following rules:</div>
 <div class="criteria_list">
