--- a/media/css/people_tags.css
+++ b/media/css/people_tags.css
@@ -14,8 +14,40 @@ tab_contents.people_tags_tab tag.checkbox.checked {
 */
 }
 tab_contents.people_tags_tab column {
-	width: 33%;
+	width: 23%;
+	margin-right: 2%;
 }
 tab_contents.people_tags_tab column .detail_header {
-	width: 92%;
+	width: 96%;
+}
+tab_contents.people_tags_tab tags {
+	width: 90%;
+/*	border: 1px solid #DDD;
+	padding-bottom: 4px;
+	box-shadow: 		inset 1px -1px 2px rgba(0,0,0,0.25);
+	-moz-box-shadow: 	inset 1px -1px 2px rgba(0,0,0,0.25);
+	-khtml-box-shadow: 	inset 1px -1px 2px rgba(0,0,0,0.25);
+	-webkit-box-shadow: inset 1px -1px 2px rgba(0,0,0,0.25);	
+
+ 	border-radius: 4px;
+ 	-moz-border-radius: 4px;
+ 	-webkit-border-radius: 4px;		
+
+ 	border-top-left-radius: 0px;
+	-moz-border-radius-topleft: 0px;
+	-webkit-border-top-left-radius: 0px;
+	border-top-right-radius: 0px;
+	-moz-border-radius-topright: 0px;
+*/
+	margin-bottom: 20px;
+}
+tab_contents.people_tags_tab tag name {
+	white-space: normal;
+}
+.new_category_block {
+	padding: 40px 10% 40px 0px;
+	text-align: center;
+}
+tab_contents.people_tags_tab .actions {
+	padding:  20px 0px;
 }
