--- a/mycelium/templates/mycelium_base.html
+++ b/mycelium/templates/mycelium_base.html
@@ -47,6 +47,7 @@
 	{% endblock %}
 	</footer>
 	{% endblock %}
+	{# <feedback_button></feedback_button> #}
 	<script type="text/javascript">
   	(function() {
 	    var uv = document.createElement('script'); uv.type = 'text/javascript'; uv.async = true;
