changed media url to fix staging

--- a/media/css/people_tags.css
+++ b/media/css/people_tags.css
@@ -52,5 +52,9 @@ tab_contents.people_tags_tab .actions {
 	padding:  20px 0px;
 }
 tab_contents.people_tags_tab column .detail_header .header_actions {
+	display: none;
 	float: right;
+}
+tab_contents.people_tags_tab column .detail_header:hover .header_actions {
+	display: block;
 }
