--- a/mycelium/templates/mycelium_base.html
+++ b/mycelium/templates/mycelium_base.html
@@ -4,7 +4,7 @@
 {% css "/css/contrib/jquery-ui-1.8.10.custom.css" %}
 {% endblock %}
 {% block javascript %}{{block.super}}
-{% if ENV == "DEV" %}
+{# {% if ENV == "DEV" %} #}
 	{% js "/js/contrib/jquery.scrollTo-min.js" %}
 	{% js "/js/contrib/jquery.toggleval.js" %}
 	{% js "/js/contrib/jquery.hotkeys-0.7.9.min.js" %}
@@ -15,9 +15,9 @@
 	{% js "/js/contrib/autocolumn.min.js" %}
 	{% js "/js/mycelium/mycelium_elements.js" %}
 	{% js "/js/mycelium/mycelium_search.js" %}	
-{% else %}
-	{% js "/js/mycelium/mycelium_base_all.js" %}
-{% endif %}
+{# {% else %} #}
+{# 	{% js "/js/mycelium/mycelium_base_all.js" %} #}
+{# {% endif %} #}
 {% endblock %}
 {% block content %}
 	<span id="test_badge"></span>
