--- a/mycelium/apps/generic_tags/templates/generic_tags/_people_tag_tab.html
+++ b/mycelium/apps/generic_tags/templates/generic_tags/_people_tag_tab.html
@@ -8,7 +8,9 @@
 			<a href="{% url generic_tags:rename_tagset person.pk tsm.pk %}" class="edit_tagset_name_btn"><img src="{% media_url "images/icon-edit-16.png" %}"/></a>
 			<a href="{% url generic_tags:delete_tagset person.pk tsm.pk %}" class="delete_tagset_btn"><img src="{% media_url "images/icon-trash-16.png" %}"/></a>
 		</div>
-		{{tsm.name}}
+		<form id="category_name" class="category_name" action="{% url generic_tags:rename_tagset person.pk tsm.pk %}" method="POST">{% csrf_token %}
+			{% generic_editable_field tsm.form.name %}
+		</form>
 	</div>	
 	<div class="tags_list">
 	{% render_tags_as_checklist person tsm.slug %}
