added facebook and twitter, as well as tweaks to the add tag category

--- a/mycelium/apps/marketing_site/templates/marketing_site/home.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/home.html
@@ -74,6 +74,10 @@ function rotate_verbs() {
 			</form>
 			<div class="email_terms">We hate spam, too. We'll only use your email to notify you of updates.</div>
 			{% endif %}
+			<social_links>
+			<iframe src="https://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2FAGoodCloud&amp;layout=standard&amp;show_faces=true&amp;width=200&amp;action=like&amp;font=lucida+grande&amp;colorscheme=light&amp;height=120" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:200px; height:120px;" allowTransparency="true"></iframe>
+			<a href="http://www.twitter.com/agoodcloud"><img src="http://twitter-badges.s3.amazonaws.com/follow_us-b.png" alt="Follow GoodCloud on Twitter"/></a>
+			</social_links>
 		</td>
 	</tr>
 </table>
