--- a/media/css/marketing_site.css
+++ b/media/css/marketing_site.css
@@ -324,3 +324,9 @@ input {
 #footer a:hover {
 	color: #3B5672;
 }
+social_links {
+	padding: 10px;
+	margin-top: 20px;
+	text-align: center;
+	display: block;
+}
