tests for delete group, search, and rename group

--- a/mycelium/apps/groups/templates/groups/_search_result_row_group.html
+++ b/mycelium/apps/groups/templates/groups/_search_result_row_group.html
@@ -2,7 +2,7 @@
 	<td class="name">
 		<a href="{% url groups:group obj.pk %}">
 			<icon class="{{obj.contact_type}}" ></icon>
-			<span class="highlightable">{{obj.name}}</span>
+			<span class="highlightable">{{obj.full_name}}</span>
 		</a>
 	</td>
 	<td class="email"></td>
