--- a/mycelium/apps/groups/templates/groups/group.html
+++ b/mycelium/apps/groups/templates/groups/group.html
@@ -34,7 +34,7 @@ $(function(){
 <div class="group_rules group_detail_column edit_mode_on">
 	<div class="detail_header">Rules</div>
 	<div class="group_rules_boolean_sentence">
-	All <select><option>people</option><option>people or organizations</option><option>people or groups</option><option>organizations or groups</option><option selected>people, organizations or groups</option></select> who match <select><option selected>all</option><option>any</option></select> of the following rules:
+	All people who match <select><option selected>all</option><option>any</option></select> of the following rules:
 	</div>
 
 	{% include "groups/_rule.html" %}
