rules_logic.js  is valid json

--- a/mycelium/apps/rules/templates/rules/_choices.html
+++ b/mycelium/apps/rules/templates/rules/_choices.html
@@ -1,1 +1,1 @@
-{% autoescape on %}{% for c in choices %}<option value="{{c|first}}">{{c|last}}</option>{% endfor %}{% endautoescape %}
+{% filter force_escape %}<select>{% for c in choices %}<option value="{{c|first}}">{{c|last}}</option>{% endfor %}</select>{% endfilter %}
