--- a/mycelium/apps/groups/templates/groups/group.html
+++ b/mycelium/apps/groups/templates/groups/group.html
@@ -8,6 +8,8 @@
 {% generic_tags_js %}
 {% js "/js/mycelium/people_common.js" %}
 {% js "/js/mycelium/groups.js" %}
+
+{% js "/rules/rules_logic.js" %}
 {% if request.GET.edit == "ON" or form.instance.full_name == "No Name"  %}
 <script type="text/javascript" charset="utf-8">
 $(function(){
@@ -34,32 +36,42 @@ $(function(){
 <div class="group_rules group_detail_column edit_mode_on">
 	<div class="detail_header">Rules</div>
 	<div class="group_rules_boolean_sentence">
-	All people who match <select><option selected>all</option><option>any</option></select> of the following rules:
+	All people who match {% generic_editable_field form.rules_boolean %} of the following rules:
 	</div>
-
-	{% include "groups/_rule.html" %}
 		
-	<div class="rule">
-		<select><option>has any tag that</option><option>has a general tag that</option><option>has a volunteer tag that</option><option>has a donor tag that</option><option>volunteer status</option><option selected>last volunteer shift</option><option>last donation</option></select>
-
-		<select><option>is</option><option>is before</option><option selected>is after</option></select>
-
-		<input type="text" class="datepicker" value="{% now "m/d/Y" %}" />
-	</div>
+	<rules>
+		{% for r_form in rule_formset.forms %}
+		<rule>
+			<left_side>{% generic_editable_field r_form.left_side %}</left_side>
+			<operator>{% generic_editable_field r_form.operator %}</operator>
+			<right_side>{% generic_editable_field r_form.right_side_value %}</right_side>
+			{% for f in r_form.hidden_fields %}{{f}}{% endfor %}
+			<delete>{{r_form.DELETE}}</delete>
+		</rule>
+		{% endfor %}
+		{{rule_formset.management_form}}
+	</rules>		
+				
 	<div class="new_criterium">
 		<a href="#" class="mycelium_btn mycelium_grey mycelium_small_btn">Add new criteria</a>
 	</div>
 </div>
 <div class="group_members group_detail_column">
+	{% with group.members as group_members  %}
 	<div class="detail_header">Members</div>
-	<div class="member_meta"><span class="count">{{group.members.count}}</span> people in this group:</div>
+	<fragment name="group_member_count" action="replace">
+	<div class="member_meta"><span class="count">{{group_members.count}}</span> people in this group:</div>
+	</fragment>
 	<div class="member_list">
 	<table class="striped members_table">
-	{% for p in group.members %}
-		{{p.search_result_row|safe}}
+	<fragment name="group_member_list" action="replace">
+	{% for p in group_members %}
+		{# {{p.search_result_row|safe}} #}
 	{% endfor %}
+	</fragment>
 	</table>
 	</div>
+	{% endwith %}
 </div>
 </form>
 <div class="clearfix"></div>
