--- a/mycelium/apps/rules/templates/rules/_operators_partial.html
+++ b/mycelium/apps/rules/templates/rules/_operators_partial.html
@@ -1,1 +1,1 @@
-{% filter force_escape %}<option value="{{o.pk}}">{{o.display_name}}</option>{% endfilter %}
+<option value='{{o.pk}}'>{{o.display_name|force_escape}}</option>
