--- a/mycelium/templates/mycelium_base.html
+++ b/mycelium/templates/mycelium_base.html
@@ -12,6 +12,7 @@
 	{% js "/js/contrib/jquery.autogrow.js" %}
 	{% js "/js/contrib/jquery.form.js" %}
 	{% js "/js/contrib/jquery.ba-bbq.min.js" %}
+	{% js "/js/contrib/jquery.formset.min.js" %}
 	{% js "/js/contrib/autocolumn.min.js" %}
 	{% js "/js/mycelium/mycelium_elements.js" %}
 	{% js "/js/mycelium/mycelium_search.js" %}	
