--- a/mycelium/apps/groups/templates/groups/group.html
+++ b/mycelium/apps/groups/templates/groups/group.html
@@ -34,7 +34,7 @@ $(function(){
 	{% generic_editable_field form.name %}
 </div>
 
-<div class="group_rules group_detail_column edit_mode_on">
+<div class="group_rules group_detail_column">
 	<div class="detail_header">Rules</div>
 	<div class="group_rules_boolean_sentence">
 	Find people who match {% generic_editable_field_anyall_bool form.rules_boolean %} of the following rules:
@@ -42,20 +42,21 @@ $(function(){
 		
 	<rules>
 		{% for r_form in rule_formset.forms %}
-		<rule>
+		<rule {% if r_form.instance.pk and r_form.instance.is_blank %}class="empty"{% endif %} >
 			<left_side>{% generic_editable_field r_form.left_side %}</left_side>
 			<operator>{% generic_editable_field r_form.operator %}</operator>
 			<right_side>{% generic_editable_field r_form.right_side_value %}</right_side>
 			<right_side_type>{{r_form.right_side_type}}</right_side_type>
 			<hidden>{% for f in r_form.hidden_fields %}{{f}}{% endfor %} </hidden>
-			<delete>{% if r_form.instance.pk %}{{r_form.DELETE}}{% endif %}</delete>
+			<delete>{% if r_form.instance.pk %}<span class="hidden">{{r_form.DELETE}}</span>{% endif %}<a href="#" class="mycelium_btn mycelium_delete_btn mycelium_small_btn mycelium_active_grey remove_rule_btn">Remove</a></delete>
+
 		</rule>
 		{% endfor %}
 		{{rule_formset.management_form}}
 	</rules>		
 				
 	<div class="new_criterium">
-		<a href="#" class="mycelium_btn mycelium_grey mycelium_small_btn">Add new criteria</a>
+		<a href="#" class="mycelium_btn  mycelium_small_btn add_new_rule_btn">Add new rule</a>
 	</div>
 </div>
 <div class="group_members group_detail_column">
