--- a/mycelium/templates/mycelium_base.html
+++ b/mycelium/templates/mycelium_base.html
@@ -15,6 +15,7 @@
 	{% js "/js/contrib/jquery.formset.min.js" %}
 	{% js "/js/contrib/autocolumn.min.js" %}
 	{% js "/js/mycelium/mycelium_elements.js" %}
+	{% js "/js/mycelium/generic_fields.js" %}
 	{% js "/js/mycelium/mycelium_search.js" %}	
 {# {% else %} #}
 {# 	{% js "/js/mycelium/mycelium_base_all.js" %} #}
