--- a/mycelium/apps/groups/templates/groups/group.html
+++ b/mycelium/apps/groups/templates/groups/group.html
@@ -46,7 +46,6 @@ $(function(){
 			<left_side>{% generic_editable_field r_form.left_side %}</left_side>
 			<operator>{% generic_editable_field r_form.operator %}</operator>
 			<right_side>{% generic_editable_field r_form.right_side_value %}</right_side>
-			<right_side_type>{{r_form.right_side_type}}</right_side_type>
 			<hidden>{% for f in r_form.hidden_fields %}{{f}}{% endfor %} </hidden>
 			<delete>{% if r_form.instance.pk %}<span class="hidden">{{r_form.DELETE}}</span>{% endif %}<a href="#" class="mycelium_btn mycelium_delete_btn mycelium_small_btn mycelium_active_grey remove_rule_btn">Remove</a></delete>
 
@@ -59,20 +58,16 @@ $(function(){
 		<a href="#" class="mycelium_btn  mycelium_small_btn add_new_rule_btn">Add new rule</a>
 	</div>
 </div>
-<div class="group_members group_detail_column">
+<div class="group_members group_detail_column" members_update_url="{% url groups:group_members_partial group.pk %}">
 	{% with group.members as group_members  %}
 	<div class="detail_header">Members</div>
 	<fragment name="group_member_count" action="replace">
-	<div class="member_meta"><span class="count">{{group_members.count}}</span> people in this group:</div>
+		{% include "groups/_group_member_count.html" %}
 	</fragment>
 	<div class="member_list">
-	<table class="striped members_table">
 	<fragment name="group_member_list" action="replace">
-	{% for p in group_members %}
-		{{p.search_result_row|safe}}
-	{% endfor %}
+		{% include "groups/_group_member_list.html" %}
 	</fragment>
-	</table>
 	</div>
 	{% endwith %}
 </div>
