--- a/mycelium/apps/generic_tags/templates/generic_tags/_people_tag_tab.html
+++ b/mycelium/apps/generic_tags/templates/generic_tags/_people_tag_tab.html
@@ -1,6 +1,8 @@
 {% load i18n generic_fields friendly_data_formatting humanize generic_tag_tags %}
 <tab_contents class="people_tags_tab">
-
+<actions>
+	<a href="#" class="mycelium_btn mycelium_small_btn mycelium_active_grey mycelium_tool_btn">Manage Tags</a>
+</actions>
 {% for tsm in person.tagsets %}
 <column>
 	<div class="detail_header">
@@ -18,29 +20,4 @@
 </column>
 {% if forloop.counter|divisibleby:4 or forloop.last%}<div class="clearfix"></div>{% endif %}
 {% endfor %}
-<div class="actions">
-	<tabbed_box class="with_button closed" name="add_a_category">
-		<tab_title_container>	
-		<tab_title>
-			<text>Add a Category</text>
-		</tab_title>
-		</tab_title_container>
-		<box_content>
-		<form id="new_category" action="{% url generic_tags:new_tagset person.pk %}" method="POST">{% csrf_token %}
-		<span class="edit_mode_on">
-			{% generic_editable_field new_tagset_form.name %}
-		</span>
-		
-		<form_actions>
-			<input type="submit" class="mycelium_btn add_category_btn" value="Add Tag Category">
-		</form_actions>
-		<box_close>
-			<a href="#" class="mycelium_btn mycelium_grey cancel_add_btn">Cancel</a>
-		</box_close>
-
-		</form>
-		</box_content>
-		</tabbed_box>
-	</tabbed_box>
-</div>
 </tab_contents>
