stub page and tests for manage buttons in

--- a/media/css/more.css
+++ b/media/css/more.css
@@ -52,6 +52,10 @@ body {
 	background-image: url("../images/icon-spreadsheet-76.png");
 	background-position: 24px 10px;	
 }
+.tag_button {
+	background-image: url("../images/icon-tag-100.png");
+	background-position: 14px 23px;	
+}
 .more_row {
 	clear: left;
 	width: 100%;
