--- a/mycelium/apps/mycelium_core/templates/mycelium_core/more_menu.html
+++ b/mycelium/apps/mycelium_core/templates/mycelium_core/more_menu.html
@@ -32,6 +32,11 @@
 		<div class="button_title">Logos</div>
 		<div class="button_description">Download resized versions of your logo for other sites</div>
 	</a>
+	<a href="{% url generic_tags:manage %}" class="mycelium_btn more_button tag_button">
+		<div class="button_title">Tags</div>
+		<div class="button_description">Manage Tags and Tag Categories</div>
+	</a>
+
 	</div>
 </div>
 {% endblock %}
