--- a/mycelium/apps/generic_tags/templates/generic_tags/_manage_tags_tagset_details.html
+++ b/mycelium/apps/generic_tags/templates/generic_tags/_manage_tags_tagset_details.html
@@ -1,16 +1,16 @@
 {% load i18n generic_fields friendly_data_formatting generic_tag_tags humanize %}
 {% for ts in all_tagsets %}
 <tagset>
-		<div class="detail_header">
-			<div class="header_actions">
-				<a href="{% url generic_tags:delete_tagset ts.pk %}" class="delete_tagset_btn mycelium_btn mycelium_delete_btn mycelium_active_grey mycelium_small_btn">Delete Tag Category</a>
-			</div>
-			{% generic_editable_field ts.form.name %}
+	<div class="detail_header">
+		<div class="header_actions">
+			<a href="{% url generic_tags:delete_tagset ts.pk %}" class="delete_tagset_btn mycelium_btn mycelium_delete_btn mycelium_active_grey mycelium_small_btn">Delete Tag Category</a>
 		</div>
+		{% generic_editable_field ts.form.name %}
+	</div>
 	<table class="tag_list striped">
 	{% for t in ts.all_tags_and_counts_with_form %}
 		{% with t.tag_form as t_form %}
-		<tr class="striped_row">
+		<tr class="striped_row tag_row">
 			<td class="tag_name">{% generic_editable_field t_form.name %}</td>
 			<td class="num_people"><span class="count">{{t.num_people|intcomma}}</span> 
 				{# {% if t.num_people == 1 %}person{% else %}people{% endif %} #}
