--- a/mycelium/apps/generic_tags/templates/generic_tags/manage.html
+++ b/mycelium/apps/generic_tags/templates/generic_tags/manage.html
@@ -1,6 +1,6 @@
 {% extends "generic_tags/base.html" %}
 {% load i18n generic_fields friendly_data_formatting generic_tag_tags humanize %}
-{% block title %}Manage Tags and Tag Categories{% endblock %}
+{% block title %}Manage Tags{% endblock %}
 {% block extra_body %}class="manage_tags"{% endblock %}
 {% block css %}{{block.super}}
 {% generic_field_css %}
