--- a/mycelium/apps/generic_tags/templates/generic_tags/_tags_and_add_tag.html
+++ b/mycelium/apps/generic_tags/templates/generic_tags/_tags_and_add_tag.html
@@ -1,15 +1,15 @@
 <tags>
-<fragment name="{{tag_set_name}}_tags" action="replace">
+<fragment name="{{tag_set_id}}_tags" action="replace">
 	{% include "generic_tags/_tag_list.html" %}
 </fragment>
-<form action="{{add_tag_url}}" method="POST" id="new_{{tag_set_name}}_tag_form" class="new_tag_form" >{% csrf_token %}
+<form action="{{create_tag_url}}" method="POST" id="new_{{tag_set_id}}_tag_form" class="new_tag_form" >{% csrf_token %}
 <tag class="new_tag">
 	<input type="hidden" name="target_pk" value="{{target.pk}}">
 	<input type="text" name="new_tag" value="" placeholder="Type a new tag" maxlength="100" autocomplete="off" results_url="{{search_results_url}}">
 	<input type="submit" class="mycelium_btn mycelium_small_btn tag_add_btn" value="Add">
 </tag>
 <search_results>
-<fragment name="new_{{tag_set_name}}_tag_search_results" action="replace">
+<fragment name="new_{{tag_set_id}}_tag_search_results" action="replace">
 
 </fragment>
 </search_results>
