setting up login templates, fixing failing test

--- a/mycelium/apps/accounts/templates/accounts/base_login.html
+++ b/mycelium/apps/accounts/templates/accounts/base_login.html
@@ -1,5 +1,8 @@
 {% extends "mycelium_base.html" %}
-{% block css %}{{block.super}}
-{% css "css/people.css" %}
-{% css "css/login.css" %}
+{% block title %}Log in to GoodCloud{% endblock %}
+
+{% block nav %}{% endblock %}
+{% block footer %}{% endblock %}
+{% block content %}
+
 {% endblock %}
