new green background

--- a/media/css/mycelium_elements.css
+++ b/media/css/mycelium_elements.css
@@ -1,5 +1,7 @@
 body {
-	background: url("../images/green_tweed_background.gif");
+	/*background: url("../images/green_tweed_background.gif");*/
+	background: url("../images/background-noise-green.png");
+
 }
 
 
