--- a/mycelium/apps/accounts/templates/accounts/logout.html
+++ b/mycelium/apps/accounts/templates/accounts/logout.html
@@ -3,4 +3,7 @@
 
 {% block content %}
 You're logged out. Hope you enjoyed using GoodCloud, and are off to something great!
+
+Want to <a href="{% url accounts:login %}">log back in</a>?
+
 {% endblock %}
