--- a/mycelium/apps/accounts/templates/accounts/login.html
+++ b/mycelium/apps/accounts/templates/accounts/login.html
@@ -1,30 +1,21 @@
 {% extends "accounts/base_login.html" %}
 
-{% block content %}
-{{request.account.subdomain}}.agoodcloud.com
-<br/>
-<br/>
-Log in to {{request.account.name}}'s GoodCloud!
-
-{% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
-{% endif %}
-
-<form method="post" action="{% url accounts:login %}">
-{% csrf_token %}
-<table>
-<tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
-</table>
-
-<input type="submit" value="login" />
-<input type="hidden" name="next" value="{{ next }}" />
-</form>
-
+{% block dialog_content %}
+	<div class="welcome_message">Welcome to GoodCloud!</div>
+	<form method="post" action="{% url accounts:login %}">
+	{% csrf_token %}
+	<field>
+	<label>Username:</label><input type="text" name="username" placeholder="Username" autofocus>
+	</field>
+	<field>
+	<label>Password:</label><input type="password" name="password" placeholder="Password">
+	</field>
+	<actions>
+		{% if form.errors %}
+		<div class="login_error">Your username and password didn't match. Please try again.</div>
+		{% endif %}
+		<input type="submit" value="Log In" class="mycelium_btn"/>
+	</actions>
+	<input type="hidden" name="next" value="{{ next }}" />
+	</form>
 {% endblock %}
