login sel test passes!

--- a/mycelium/apps/accounts/templates/accounts/login.html
+++ b/mycelium/apps/accounts/templates/accounts/login.html
@@ -14,7 +14,7 @@
 		{% if form.errors %}
 		<div class="login_error">Your username and password didn't match. Please try again.</div>
 		{% endif %}
-		<input type="submit" value="Log In" class="mycelium_btn"/>
+		<input type="submit" value="Log In" class="mycelium_btn login_btn"/>
 	</actions>
 	<input type="hidden" name="next" value="{{ next }}" />
 	</form>
